--- a/app/src/main/res/layout/fragment_adminpeople_main.xml
+++ b/app/src/main/res/layout/fragment_adminpeople_main.xml
@@ -95,7 +95,7 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/btnSaveProfile"
+                android:id="@+id/btnEditProfileFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
