--- a/app/src/main/res/layout/fragment_edit_user_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_user_profile.xml
@@ -79,7 +79,7 @@
                 android:textSize="14sp" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/imageViewProfile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:src="@tools:sample/avatars" />
