--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -81,7 +81,7 @@
                 android:text="TextView"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="18sp"
+                android:textSize="24sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -95,7 +95,7 @@
                 android:textSize="18sp" />
 
             <Button
-                android:id="@+id/btnSaveProfile"
+                android:id="@+id/btnEditProfileFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
