--- a/app/src/main/res/layout/fragment_user_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_user_profile_edit.xml
@@ -100,7 +100,7 @@
                 android:textSize="14sp" />
 
             <Button
-                android:id="@+id/btnSaveProfile"
+                android:id="@+id/btnEditProfileFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
