--- a/app/src/main/res/layout/nav_header_nav_main.xml
+++ b/app/src/main/res/layout/nav_header_nav_main.xml
@@ -16,7 +16,7 @@
     -->
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/nav_header_desc"
