--- a/app/src/main/res/menu/activity_nav_main_drawer.xml
+++ b/app/src/main/res/menu/activity_nav_main_drawer.xml
@@ -25,9 +25,9 @@
     <item android:title="Next...">
         <menu>
             <item
-                android:id="@+id/nav_about"
-                android:icon="@drawable/ic_menu_share"
-                android:title="About" />
+                android:id="@+id/nav_profile"
+                android:icon="@drawable/profile"
+                android:title="Profile" />
             <item
                 android:id="@+id/nav_logout"
                 android:icon="@drawable/ic_menu_send"
