--- a/app/src/main/res/menu/activity_nav_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_nav_menu_drawer.xml
@@ -25,7 +25,7 @@
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_about"
+                android:id="@+id/nav_profile"
                 android:icon="@drawable/ic_menu_share"
                 android:title="@string/menu_share" />
             <item
