--- a/app/src/main/res/layout-v21/lista_recycler_disciplines.xml
+++ b/app/src/main/res/layout-v21/lista_recycler_disciplines.xml
@@ -1,44 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorBackGroundBrown"
-    android:orientation="horizontal">
+    android:layout_margin="2dp"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorBackGroundBrown"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:background="#807E57"
         android:orientation="horizontal"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp">
+        android:padding="10dp">
 
         <LinearLayout
             android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
-            android:orientation="vertical"
-            android:paddingStart="10dp">
-
-            <TextView
-                android:id="@+id/textView30"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:text="Discipline Name:"
-                android:textColor="@color/colorBright"
-                android:textSize="10sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/nameDiscipline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:text="nameDiscipline"
-                android:textColor="@color/colorBright"
-                android:textSize="16sp" />
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -47,97 +28,65 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView33"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.1"
-                    android:text="Acronym"
-                    android:textColor="@color/colorBright"
-                    android:textSize="10sp"
-                    android:textStyle="bold" />
-
-                <TextView
                     android:id="@+id/acronDiscipline"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.2"
+                    android:layout_weight="8"
                     android:text="acron"
-                    android:textColor="@color/colorBright"
-                    android:textSize="12sp" />
+                    android:textAlignment="viewStart"
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textView28"
+                    android:id="@+id/nameDiscipline"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.1"
-                    android:text="Year: "
-                    android:textAlignment="center"
-                    android:textColor="@color/colorBright"
-                    android:textSize="10sp"
+                    android:layout_weight="1"
+                    android:text="nameDiscipline"
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp"
                     android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="4"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/disciplineYear"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1.5"
                     android:text="2019-2020"
-                    android:textAlignment="viewStart"
-                    android:textColor="@color/colorBright"
+                    android:textAlignment="textStart"
+                    android:textColor="@android:color/white"
                     android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/textView29"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.1"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:text="Semester: "
-                    android:textAlignment="viewStart"
-                    android:textColor="@color/colorBright"
-                    android:textSize="10sp"
-                    android:textStyle="bold" />
+                    android:textAlignment="textEnd"
+                    android:textColor="@android:color/white"
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/disciplineSemester"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1.2"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
                     android:text="1"
-                    android:textColor="@color/colorBright"
+                    android:textAlignment="viewStart"
+                    android:textColor="@android:color/white"
                     android:textSize="12sp" />
 
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/textView31"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingTop="10dp"
-                android:text="University Name:"
-                android:textColor="@color/colorBright"
-                android:textSize="10sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/nameUniversity"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="nameUniversity"
-                android:textColor="@color/colorBright"
-                android:textSize="14sp" />
-
-            <TextView
-                android:id="@+id/textView32"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:paddingTop="10dp"
-                android:text="Course name:"
-                android:textColor="@color/colorBright"
-                android:textSize="10sp"
-                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/nameCourse"
@@ -145,8 +94,17 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="nameCourse"
-                android:textColor="@color/colorBright"
-                android:textSize="14sp" />
+                android:textColor="@android:color/white"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/nameUniversity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="nameUniversity"
+                android:textColor="@android:color/white"
+                android:textSize="12sp" />
 
         </LinearLayout>
 
