--- a/app/src/main/res/layout-v21/lista_recycler_students.xml
+++ b/app/src/main/res/layout-v21/lista_recycler_students.xml
@@ -31,20 +31,10 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/studentFirstName"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/studentName"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="firstName"
-                        android:textColor="@android:color/white"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/studentLastName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:text="lastName"
+                        android:text="name"
                         android:textColor="@android:color/white"
                         android:textSize="14sp"
                         android:textStyle="bold" />
