--- a/app/src/main/res/layout/fragment_student_main.xml
+++ b/app/src/main/res/layout/fragment_student_main.xml
@@ -49,8 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textListUniversities"
@@ -66,8 +65,7 @@
                 android:id="@+id/recyclerStudents"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="6dp"
-                />
+                android:layout_marginTop="6dp" />
 
         </LinearLayout>
 
