--- a/app/src/main/res/layout/fragment_class_add.xml
+++ b/app/src/main/res/layout/fragment_class_add.xml
@@ -173,7 +173,8 @@
                 android:id="@+id/buttonClassAdd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_gravity="bottom"
+                android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:text="ADD"
                 android:theme="@style/botaoPadraoBrown" />
