--- a/app/src/main/res/layout/fragment_class_update.xml
+++ b/app/src/main/res/layout/fragment_class_update.xml
@@ -181,7 +181,7 @@
                 android:inputType="textMultiLine" />
 
             <Button
-                android:id="@+id/buttonSave"
+                android:id="@+id/buttonEdit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
